package org.heckcorp.domination;

import java.awt.*;

public interface Positionable {
    /**
     * Returns this Positionable's position.
     */
    Point getPosition();
}
