package org.heckcorp.domination;

public enum Status {
    HEALTHY, DAMAGED, DESTROYED, SELECTED, HIDDEN, REVEALED, UNSELECTED, SKIPPED
}
