@startuml

title __DOMINATION's Class Diagram__\n

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.Calculator {
        {static} + distance()
        {static} + distance()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.ComputerPlayerView {
        - knownEnemies : Set<Unit>
        - log : Logger
        + ComputerPlayerView()
        + addGamePiece()
        + attack()
        + getKnownEnemies()
        + getMap()
        + initialize()
        + message()
        + move()
        + selectHex()
        + setCurrentPlayer()
        + setMap()
        + setMonitor()
        + setPlayer()
        + setStatus()
        + setWinningPlayer()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.Constants {
        {static} + ACTION_END_TURN : String
        {static} + ACTION_LOAD_GAME : String
        {static} + ACTION_SAVE_GAME : String
        {static} + ACTION_SKIP_UNIT : String
        {static} + ACTION_SLEEP_UNIT : String
        {static} + ACTION_TOGGLE_HEX_HIDING : String
        {static} + ACTION_WAIT_UNIT : Object
        {static} + COMPUTER_PLAYER_COLOR : Color
        {static} + GAME_NAME : String
        {static} + HUMAN_PLAYER_COLOR : Color
        {static} + INSTRUCTIONS_FILE : String
        {static} + LOGGING_CONFIG_FILE : String
        {static} + MAJOR_VERSION : int
        {static} + MAP_HEIGHT : int
        {static} + MAP_WIDTH : int
        {static} + MINOR_VERSION : int
        {static} + NEUTRAL_CITIES : int
        {static} + NEUTRAL_PLAYER_COLOR : Color
        {static} + PAUSE_TIME : int
        {static} + PLAYER_CITIES : int
        {static} + RELEASE_NOTES_FILE : String
        {static} + UI_COMPONENT_LARGE_HEIGHT : int
        {static} + UI_COMPONENT_LARGE_WIDTH : int
        {static} + UI_COMPONENT_SMALL_HEIGHT : int
        {static} + UI_COMPONENT_SMALL_WIDTH : int
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.DefaultModel {
        - log : Logger
        - players : List<Player>
        {static} - serialVersionUID : long
        + addGamePiece()
        + addPlayer()
        + destroyUnit()
        + endTurn()
        + getGameStateManager()
        + getHex()
        + getTurnManager()
        + moveSelectedUnit()
        + selectHex()
        + selectUnit()
        + setCurrentPlayer()
        + setMap()
        + setSelectedUnitDestination()
        + setWinningPlayer()
        + skipSelectedUnit()
        + sleepSelectedUnit()
        + startTurnManager()
        + toggleHexHiding()
        + waitSelectedUnit()
        - attack()
        - moveSelectedUnitOneHex()
        - setStatus()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.DefaultModel.GameStateManager {
        - in : ObjectInputStream
        + initializeModel()
        + setInputStream()
        + write()
    }
  }
  

  namespace org.heckcorp.domination {
    enum Direction {
      NORTH
      NORTHEAST
      NORTHWEST
      SOUTH
      SOUTHEAST
      SOUTHWEST
      name
      value
    }
  }
  

  namespace org.heckcorp.domination {
    interface org.heckcorp.domination.GameModel {
        {abstract} + addGamePiece()
        {abstract} + addPlayer()
        {abstract} + endTurn()
        {abstract} + getHex()
        {abstract} + getTurnManager()
        {abstract} + moveSelectedUnit()
        {abstract} + selectHex()
        {abstract} + selectUnit()
        {abstract} + setMap()
        {abstract} + setSelectedUnitDestination()
        {abstract} + skipSelectedUnit()
        {abstract} + sleepSelectedUnit()
        {abstract} + startTurnManager()
        {abstract} + toggleHexHiding()
        {abstract} + waitSelectedUnit()
    }
  }
  

  namespace org.heckcorp.domination {
    abstract class org.heckcorp.domination.GamePiece {
        + getHex()
        + getOwner()
        + getPosition()
        + setHex()
        + setOwner()
    }
  }
  

  namespace org.heckcorp.domination {
    interface org.heckcorp.domination.GameView {
        {abstract} + addGamePiece()
        {abstract} + attack()
        {abstract} + initialize()
        {abstract} + message()
        {abstract} + move()
        {abstract} + selectHex()
        {abstract} + setCurrentPlayer()
        {abstract} + setMap()
        {abstract} + setMonitor()
        {abstract} + setStatus()
        {abstract} + setWinningPlayer()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.Hex {
        + x : int
        + y : int
        {static} - serialVersionUID : long
        - units : List<Unit>
        + Hex()
        + addUnit()
        + getBestDefender()
        + getOwner()
        + getPosition()
        + getUnits()
        + isAdjacentTo()
        + isEmpty()
        + removeUnit()
        + toString()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.HexMap {
        + height : int
        + width : int
        - hexes : Hex[][]
        - log : Logger
        {static} - serialVersionUID : long
        + HexMap()
        + HexMap()
        + addGamePiece()
        {static} + adjacent()
        {static} + getAdjacent()
        + getAdjacentHex()
        + getAdjacentHexes()
        {static} + getAllAdjacent()
        {static} + getDirection()
        {static} + getDirection()
        + getHex()
        + getHex()
        + getHexes()
        + getHexesAtRange()
        + getHexesInRange()
        + getPathfinder()
        + getRandomHex()
        + getRandomHex()
        + getSize()
        {static} + isAdjacent()
        + isInMap()
        + write()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.LogFormatter {
        + format()
    }
  }
  

  namespace org.heckcorp.domination {
    interface org.heckcorp.domination.ModelInitializer {
        {abstract} + initializeModel()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.NewGameInitializer {
        - height : int
        - width : int
        + NewGameInitializer()
        {static} + createPlayer()
        + initializeModel()
        - createPlayers()
        - createUnits()
    }
  }
  

  namespace org.heckcorp.domination {
    abstract class org.heckcorp.domination.Player {
        {static} # log : Logger
        - color : Color
        - name : String
        - units : Set<Unit>
        + Player()
        + addUnit()
        + clearReadyUnit()
        + finishTurn()
        + getColor()
        + getLog()
        + getName()
        + getReadyUnit()
        + getType()
        + getUnits()
        + getView()
        {abstract} + move()
        + removeUnit()
        + setReadyUnit()
        + setView()
        + startTurn()
        + turnFinished()
        + unitActionFinished()
        + write()
    }
  }
  

  namespace org.heckcorp.domination {
    enum PlayerType {
      COMPUTER
      HUMAN
      NEUTRAL
    }
  }
  

  namespace org.heckcorp.domination {
    interface org.heckcorp.domination.Positionable {
        {abstract} + getPosition()
    }
  }
  

  namespace org.heckcorp.domination {
    enum Status {
      DAMAGED
      DESTROYED
      HEALTHY
      HIDDEN
      REVEALED
      SELECTED
      SKIPPED
      UNSELECTED
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.Unit {
        - asleep : boolean
        - attacksLeft : int
        {static} - log : Logger
        - movesLeft : int
        - path : List<Hex>
        {static} - serialVersionUID : long
        - skipped : boolean
        + Unit()
        + attack()
        + canAttack()
        + canEnterHex()
        + canMoveAlongPath()
        + clearPath()
        + decreaseAttacksLeft()
        + decreaseMovesLeft()
        + getAttack()
        + getAttacks()
        + getAttacksLeft()
        + getDefense()
        + getHealth()
        + getLastHex()
        + getMovement()
        + getMovesLeft()
        + getNextDirection()
        + getPath()
        + getRange()
        + getType()
        + isAsleep()
        + isDamaged()
        + isDestroyed()
        + isReadyForAction()
        + isSkipped()
        + move()
        + reset()
        + setAsleep()
        + setAttacksLeft()
        + setHealth()
        + setHex()
        + setMovesLeft()
        + setPath()
        + skip()
        + takeDamage()
        + toString()
    }
  }
  

  namespace org.heckcorp.domination {
    enum Health {
      DAMAGED
      DESTROYED
      HEALTHY
    }
  }
  

  namespace org.heckcorp.domination {
    enum Type {
      SPACESHIP
      attack
      attacks
      cost
      defense
      id
      movement
      name
    }
  }
  

  namespace org.heckcorp.domination {
    interface org.heckcorp.domination.ViewMonitor {
        {abstract} + hexClicked()
    }
  }
  

  namespace org.heckcorp.domination {
    class org.heckcorp.domination.ViewMultiplexer {
        - gameViews : Set<GameView>
        - log : Logger
        + addGamePiece()
        + addGameView()
        + attack()
        + initialize()
        + message()
        + move()
        + selectHex()
        + setCurrentPlayer()
        + setMap()
        + setMonitor()
        + setStatus()
        + setWinningPlayer()
    }
  }
  

  org.heckcorp.domination.ComputerPlayerView .up.|> org.heckcorp.domination.GameView
  org.heckcorp.domination.ComputerPlayerView o-- org.heckcorp.domination.HexMap : map
  org.heckcorp.domination.ComputerPlayerView o-- org.heckcorp.domination.desktop.ComputerPlayer : player
  org.heckcorp.domination.DefaultModel .up.|> java.io.Serializable
  org.heckcorp.domination.DefaultModel .up.|> org.heckcorp.domination.GameModel
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.Player : currentPlayer
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.DefaultModel.GameStateManager : gameStateManager
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.HexMap : map
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.Unit : selectedUnit
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.desktop.TurnManager : turnManager
  org.heckcorp.domination.DefaultModel o-- org.heckcorp.domination.ViewMultiplexer : views
  org.heckcorp.domination.DefaultModel +-down- org.heckcorp.domination.DefaultModel.GameStateManager
  org.heckcorp.domination.DefaultModel.GameStateManager .up.|> org.heckcorp.domination.ModelInitializer
  org.heckcorp.domination.GamePiece .up.|> java.io.Serializable
  org.heckcorp.domination.GamePiece .up.|> org.heckcorp.domination.Positionable
  org.heckcorp.domination.GamePiece o-- org.heckcorp.domination.Hex : hex
  org.heckcorp.domination.GamePiece o-- org.heckcorp.domination.Player : owner
  org.heckcorp.domination.Hex .up.|> java.io.Serializable
  org.heckcorp.domination.Hex .up.|> org.heckcorp.domination.Positionable
  org.heckcorp.domination.Hex o-- org.heckcorp.domination.Player : owner
  org.heckcorp.domination.HexMap .up.|> java.io.Serializable
  org.heckcorp.domination.HexMap o-- org.heckcorp.domination.desktop.Pathfinder : pathfinder
  org.heckcorp.domination.LogFormatter -up-|> java.util.logging.Formatter
  org.heckcorp.domination.NewGameInitializer .up.|> org.heckcorp.domination.ModelInitializer
  org.heckcorp.domination.Player .up.|> java.io.Serializable
  org.heckcorp.domination.Player o-- org.heckcorp.domination.GameView : view
  org.heckcorp.domination.Player o-- org.heckcorp.domination.Unit : readyUnit
  org.heckcorp.domination.Player +-down- org.heckcorp.domination.Player.PlayerType
  org.heckcorp.domination.Unit .up.|> java.io.Serializable
  org.heckcorp.domination.Unit -up-|> org.heckcorp.domination.GamePiece
  org.heckcorp.domination.Unit o-- org.heckcorp.domination.Unit.Health : health
  org.heckcorp.domination.Unit o-- org.heckcorp.domination.Hex : lastHex
  org.heckcorp.domination.Unit o-- org.heckcorp.domination.Unit.Type : type
  org.heckcorp.domination.Unit +-down- org.heckcorp.domination.Unit.Health
  org.heckcorp.domination.Unit +-down- org.heckcorp.domination.Unit.Type
  org.heckcorp.domination.ViewMultiplexer .up.|> org.heckcorp.domination.GameView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
